--- a/Solution/WebRemina/Web.config
+++ b/Solution/WebRemina/Web.config
@@ -10,4 +10,16 @@
         <compilation debug="true" targetFramework="4.0" />
     </system.web>
 
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IAuthenticationService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8083/AppReminaService/AppReminaService"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAuthenticationService"
+                contract="ServiceReference.IAuthenticationService" name="BasicHttpBinding_IAuthenticationService" />
+        </client>
+    </system.serviceModel>
 </configuration>
