--- a/Solution/AppReminaInterfaces/AppReminaInterfaces.csproj
+++ b/Solution/AppReminaInterfaces/AppReminaInterfaces.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{BA230CBD-21C5-4E45-A0A7-05CE9D3B8BBC}</ProjectGuid>
+    <ProjectGuid>{1AC1AFE1-7AB6-4D5C-96B6-328EC297A958}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AppRemina</RootNamespace>
-    <AssemblyName>AppRemina</AssemblyName>
+    <RootNamespace>AppReminaInterfaces</RootNamespace>
+    <AssemblyName>AppReminaInterfaces</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,14 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppRemina.cs" />
+    <Compile Include="IServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AppReminaInterfaces\AppReminaInterfaces.csproj">
-      <Project>{1AC1AFE1-7AB6-4D5C-96B6-328EC297A958}</Project>
-      <Name>AppReminaInterfaces</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
