Modified Launcher to use config file instead of hosting through code.

--- a/Solution/AppReminaLauncher/App.config
+++ b/Solution/AppReminaLauncher/App.config
@@ -1,3 +1,25 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <system.serviceModel>
+        <behaviors>
+            <serviceBehaviors>
+                <behavior name="ServiceBehavior">
+                    <serviceMetadata httpGetEnabled="true" />
+                </behavior>
+            </serviceBehaviors>
+        </behaviors>
+        <services>
+            <service behaviorConfiguration="ServiceBehavior" name="AppRemina.AppReminaService">
+                <endpoint address="AppReminaService" binding="basicHttpBinding"
+                    bindingConfiguration="" name="basicHttp" contract="AppReminaInterfaces.IAuthenticationService" />
+                <endpoint binding="mexHttpBinding" bindingConfiguration="" name="mex"
+                    contract="IMetadataExchange" />
+                <host>
+                    <baseAddresses>
+                        <add baseAddress="http://localHost:8083/AppReminaService" />
+                    </baseAddresses>
+                </host>
+            </service>
+        </services>
+    </system.serviceModel>
 </configuration>
