--- a/Solution/WebRemina/Web.config
+++ b/Solution/WebRemina/Web.config
@@ -13,13 +13,13 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IAuthenticationService" />
+                <binding name="basicHttp" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8083/AppReminaService/AppReminaService"
-                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IAuthenticationService"
-                contract="ServiceReference.IAuthenticationService" name="BasicHttpBinding_IAuthenticationService" />
+                binding="basicHttpBinding" bindingConfiguration="basicHttp"
+                contract="ServiceReference.IAuthenticationService" name="basicHttp" />
         </client>
     </system.serviceModel>
 </configuration>
