--- a/Solution/WebReminaServices/WebReminaServices.csproj
+++ b/Solution/WebReminaServices/WebReminaServices.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CrosSuppoter.cs" />
     <Compile Include="IServices.cs" />
     <Compile Include="WebServices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
